# BrainDynamics_Plus

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
example/: config.json  pipeline_example.out  pipeline_example.py
src/braindynamics_plus/: __init__.py  _trialdata.py  braindata.py
src/braindynamics_plus/io/: __init__.py  epd.py
